FLEX-363 500 error in case attempting to get event details with non-existing event ID