@@ -1,6 +1,7 @@
 package io.limeup.flexbets.sport.service.impl.sportsdataio;
 
 import io.limeup.flexbets.sport.dto.*;
+import io.limeup.flexbets.sport.error.FlexBetsSportNotFoundException;
 import io.limeup.flexbets.sport.model.IoBet;
 import io.limeup.flexbets.sport.model.IoEvent;
 import io.limeup.flexbets.sport.model.IoTeam;
@@ -61,8 +62,6 @@ public class EventServiceIoMlbImpl implements EventService {
         List<Integer> venueIdsSafe = (venueIds == null || venueIds.isEmpty()) ? new ArrayList<>() : venueIds;
         List<Integer> participantIdsSafe = (participantIds == null || participantIds.isEmpty()) ? new ArrayList<>() : participantIds;
 
-
-
         List<IoEvent> events = eventRepository.listEvents(
                 dateFrom,
                 dateTo,
@@ -85,7 +84,7 @@ public class EventServiceIoMlbImpl implements EventService {
     @Override
     public EventDTO getEventById(Integer eventId) {
         IoEvent event = eventRepository.findByGameId(eventId.longValue())
-                .orElseThrow(() -> new RuntimeException("Event %s not found".formatted(eventId)));
+                .orElseThrow(() -> new FlexBetsSportNotFoundException(String.format("Event %s Not Found", eventId)));
         return mapToDto(event);
     }
 
@@ -131,9 +130,7 @@ public class EventServiceIoMlbImpl implements EventService {
                 .filter(Objects::nonNull)
                 .toList();
 
-
         dto.setMarkets(eventMarketsDto);
-
 
         if (event.getStadiumId() != null) {
             venueRepository.findByStadiumId(event.getStadiumId()).ifPresent(v -> dto.setVenue(
@@ -146,7 +143,4 @@ public class EventServiceIoMlbImpl implements EventService {
         }
         return dto;
     }
-
-
-
 }
